--- a/SchoolCoupons/Views/Shared/_LoginPartial.cshtml
+++ b/SchoolCoupons/Views/Shared/_LoginPartial.cshtml
@@ -9,13 +9,14 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
-        <li class="nav-item">
+        @* <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("Index", "Home", new { area = "" })"
                   method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
-        </li>
+        </li> *@
     }
+
     else
     {
         <li class="nav-item">
