Added Callendar with Button

--- a/SchoolCoupons/Views/Parent/Index.cshtml
+++ b/SchoolCoupons/Views/Parent/Index.cshtml
@@ -4,4 +4,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+    <hr />
+    <a href="@Url.Action("BookCoupons", "Parent")">Go to booking page</a>
 </div>
