--- a/SchoolCoupons/Views/_ViewImports.cshtml
+++ b/SchoolCoupons/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SchoolCoupons
 @using SchoolCoupons.Models
+@using Syncfusion.EJ2
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Syncfusion.EJ2
